--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,165 @@
-body
-{
-  background-color: #f8efd4;
+body{
+  color: #40514E;
+  margin: 0px;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+  font-size: 1.25em;
 }
 
-h1 {
-  color: #66bfbf;
+.top-container {
+  background-color: #EAF6F6;
+  padding-top: 100px;
+  position: relative;
 }
 
-h3 {
-  color: #d7385e ;
+.middle-container{
+  margin: 100px 0;
 }
 
-hr {
-  border-style: dotted none none;
+.bottom-container{
+  background-color: #66BFBF;
+  padding: 30px 0 20px;
+}
+
+a{
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  color:#11999E;
+  margin: 10px 20px
+}
+
+a:hover{
+  color:#EAF6F6;
+}
+
+h1{
+  margin: 50px auto 0px auto;
+  font-family: 'Parisienne', cursive;
+  font-size: 5.625rem; /*1em=16px 90px/16px(default font size) = 562.5%*/
+  color:#66BFBF;
+  line-height: 2;
+}
+
+h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  color:#66BFBF;
+  padding-bottom: 10px
+}
+
+h3{
+  font-family: 'Montserrat', sans-serif;
+  color:#11999E;
+}
+
+p{
+  line-height: 2;
+}
+
+hr{
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
   width: 5%;
-  border-color: #8fc0a9;
-  border-width: 5px;
+  margin: 100px auto;
+}
+
+.subtitle{
+  font-weight: normal;
+}
+
+.pro{
+  text-decoration: underline;
+}
+
+.intro{
+  width: 30%;
+  margin: auto;
+}
+
+.skill-row{
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+
+.contact-message{
+  width: 40%;
+  margin: 40px auto 60px auto;
+  line-height: 2;
+}
+
+.copyright{
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 15px 0;
+}
+
+.profile-pic{
+  width: 200px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+.top-cloud{
+  position: absolute;
+  right: 300px;
+  top: 40px;
+}
+
+.bottom-cloud{
+  position: absolute;
+  left: 250px;
+  bottom: 300px;
+}
+
+.code-image{
+  width: 25%;
+  float: left;
+  margin-right: 30px
+}
+
+.controller-image{
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+
+.contact-button {
+   background: #11CDD4;
+   background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -webkit-gradient(to bottom, #11CDD4, #11999E);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #FFFFFF;
+   font-family: 'Montserrat';
+   font-size: 20px;
+   font-weight: 100;
+   padding: 33px;
+   -webkit-box-shadow: 1px 1px 20px 0 #000000;
+   -moz-box-shadow: 1px 1px 20px 0 #000000;
+   box-shadow: 1px 1px 20px 0 #000000;
+   text-shadow: 1px 1px 20px #000000;
+   border: solid #337FED 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+   text-align: center;
+}
+
+.contact-button:hover {
+   border: solid #337FED 1px;
+   background: #30E3CB;
+   background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -webkit-gradient(to bottom, #30E3CB, #2BC4AD);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   text-decoration: none;
 }
